--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -74,7 +74,11 @@ hr {
     padding: 12px;
 }
 
-
+p.title-card {
+    font-size: 16px;
+    color: #000000;
+    margin-bottom: 5px;
+}
 
 .category-section, .cards-section {
     display: flex;
@@ -130,7 +134,18 @@ hr {
 
 }
 
-
 .inline-icon-text {
     margin-top: 4px;
 }
+
+.swiper {
+    width: 100%;
+    height: 100%;
+  }
+
+.swiper-slide {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
