--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -51,3 +51,12 @@ ion-textarea textarea {
     height: 120px;
 }
 
+.link-mail {
+    color: #000000;
+    text-decoration: none;
+}
+
+.white-header {
+    background: #ffffff; /* Set the background to white */
+    color: #000000; /* Set the text color to black */
+}
