--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -33,7 +33,10 @@ ion-searchbar.radius-searchbar {
     width: 110px;
     height: 36px; 
     --border-radius: 20px;
+
 }
+
+
 
 .scroll-container {
     overflow-x: auto !important;
@@ -45,17 +48,18 @@ hr {
 }
 
 /* Problem: scrollbar visible */
-.scroll {
+/* .scroll {
   display: flex;
   flex-wrap: nowrap;
   overflow-x: scroll !important;
   overflow-y: hidden;
-}
+} */
 
 
 
 .category-section::-webkit-scrollbar,
-.cards-section::-webkit-scrollbar {
+.cards-section::-webkit-scrollbar, 
+.scroll::-webkit-scrollbar {
     display: none; /* Hide the scrollbar in WebKit browsers */
 }
 
@@ -98,6 +102,13 @@ p.title-listing {
     overflow-y: hidden;
 }
 
+.scroll {
+    display: flex;
+    justify-content: center;
+    flex-wrap: nowrap;
+    overflow-x: auto; 
+    overflow-y: hidden;
+}
 
 .scroll-card {
     min-width: 200px; 
@@ -134,13 +145,15 @@ p.title-listing {
 
 .flex-profile-picture-text {
     display: flex;
-    gap: 100px
+    /* justify-content: space-around; */
+    gap: 30px
 }
 
 .space-text-change {
     display: flex;
     flex-direction: column;
-    gap: 10px;    
+    justify-content: space-evenly;
+    /* gap: 100px;     */
 
 }
 
@@ -169,4 +182,15 @@ p.title-listing {
     display: flex;
     flex-direction: column;
     gap: 4px;
+}
+
+.gap-form {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+
+ion-avatar.profile-picture {
+    height: 87px;
+    width: 87px;
 }
