--- a/src/pages/Messages.css
+++ b/src/pages/Messages.css
@@ -54,12 +54,38 @@
   cursor: pointer;
 }
 
-.imageModalContent {
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.custom-modal {
+  width: 100% !important;
+  max-width: 100% !important;
+  height: 80% !important;
+  max-height: 80% !important;
+  --width: 100%;
+  --max-width: 100%;
+  --height: 80%;
+  --max-height: 80%;
+}
+
+.modal-content {
+  width: 100%;
   height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.modal-image {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.close-icon {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 24px;
+  cursor: pointer;
 }
 
 @media screen and (min-width: 768px) {
