--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -8,8 +8,8 @@ ion-searchbar.radius-searchbar {
 } */
 
 .image-test {
-  max-height: 200px;
-  min-width: 240px;
+  height: 200px;
+  width: 300px;
   object-fit: cover;
 }
 
