fix profile and toasts

--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -194,3 +194,11 @@ ion-avatar.profile-picture {
     height: 87px;
     width: 87px;
 }
+
+.bold-text-contact {
+    font-weight: bold;
+}
+
+.about-img {
+    border-radius: 5px;
+}
